-
Bug
-
Resolution: Done
-
P4: Low
-
4.8.2
-
None
-
Windows 7
Ubuntu 12.04 64-bit
-
Ia025da7343d1c36aaee34c47c6db551a6e89595f
Having the date in the string "01 January 0001", the format in the string "dd MMMM yyyy", and the C locale, QLocale::toString(QDateTime,QString) returns "01 January 1" instead of "01 January 0001"
code snippet:
QDateTime datetime; QString format("dd MMMM yyyy, hh:mm:ss"); QString str("01 January 0001, 12:00:00"); datetime = english.toDateTime(str,format); QString auxstr = english.toString(datetime.toUTC(), format); assert(str==auxstr); // <---------- FAIL