Output leading zeroes for yyyy date formats in QLocale::toString().

Converting the date 1 January 0001 to a string in the format
"dd MMMM yyyy" currently results in the string "01 January 1", but it
should be "01 January 0001".

Task-number: QTBUG-27287
Change-Id: Ia025da7343d1c36aaee34c47c6db551a6e89595f
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>

cregit: 811bf4da67cedea0daa40f2fff805003687e9d6e https://github.com/qt/qtbase/commit/811bf4da67cedea0daa40f2fff805003687e9d6e